--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,10 @@
         <h2>Top Products</h2>
         <ul class="product-list">
           <li class="product-card">
-            <a href="product_pages/index.html?product=880RR" class="product-card">
+            <a
+              href="product_pages/index.html?product=880RR"
+              class="product-card"
+            >
               <img
                 src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
                 alt="Marmot Ajax tent"
